<resources>
    <string name="app_name">I\'m Bored App</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">I\'m bored app</string>

    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Home</string>
    <string name="menu_activities">Activities proposed</string>
    <string name="menu_about">About this app</string>
    <string name="about_string"><i><b>I\'m bored App</b></i> helps you find things to do when you\'re bored!
        You just need to press the button and you will have a new activity.
        If the activity has a link, you can tap on it and it will take you to the website.
    You can also search in the menu of the <i>Proposed Activities</i>, a list of the activities that have been shown so far.</string>
    <string name="hey_string">Hey!!!</string>
    <string name="give_me_activity_string">Give me an activity!</string>
    <string name="no_link_required">This activity does not require a link</string>
    <string name="accessibility">Accessibility:  </string>
    <string name="type">Type:  </string>
    <string name="participants">Participants:  </string>
    <string name="price">Price:  </string>
    <string name="key">Key:  </string>
    <string name="link">Link:  </string>
    <string name="button_clear_list">Clear list</string>
</resources>