<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.anabelmm.imboredapp.view.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_activities"
        android:name="com.anabelmm.imboredapp.view.ListActivitiesFragment"
        android:label="@string/menu_activities"
        tools:layout="@layout/fragment_list_activities" >
        <action
            android:id="@+id/action_nav_gallery_to_nav_home"
            app:destination="@id/nav_home" />
    </fragment>

    <fragment
        android:id="@+id/nav_about"
        android:name="com.anabelmm.imboredapp.view.AboutFragment"
        android:label="@string/menu_about"
        tools:layout="@layout/fragment_about" >
        <action
            android:id="@+id/action_nav_slideshow_to_nav_home"
            app:destination="@id/nav_home" />
    </fragment>
</navigation>