<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.HomeFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/gif_cardView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:elevation="10dp"
        android:padding="10dp"
        app:cardCornerRadius="20dp"
        app:cardMaxElevation="12dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <pl.droidsonroids.gif.GifImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/bored_gif" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:elevation="10dp"
        android:padding="10dp"
        android:visibility="invisible"
        app:cardBackgroundColor="#F8F3F3"
        app:cardCornerRadius="20dp"
        app:cardMaxElevation="12dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="85dp"
                android:orientation="horizontal"
                android:padding="10dp">

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:src="@drawable/wink_icon" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:fontFamily="serif"
                    android:gravity="center"
                    android:text="@string/hey_string"
                    android:textAlignment="viewStart"
                    android:textColor="@color/design_default_color_secondary"
                    android:textSize="46sp"
                    android:textStyle="bold"
                    tools:ignore="RtlCompat" />
            </LinearLayout>

            <TextView
                android:id="@+id/text_activity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:textAlignment="center"
                android:textColor="@color/design_default_color_primary"
                android:textSize="24sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:text="@string/accessibility"
                    android:textAlignment="viewEnd"
                    android:textColor="@color/material_dynamic_neutral30"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/text_accessibility"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:textAlignment="center"
                    android:textColor="@color/material_dynamic_neutral30"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:text="@string/type"
                    android:textAlignment="viewEnd"
                    android:textColor="@color/material_dynamic_neutral30"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/text_type"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:textAlignment="center"
                    android:textColor="@color/material_dynamic_neutral30"
                    android:textSize="18sp" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:text="@string/participants"
                    android:textAlignment="viewEnd"
                    android:textColor="@color/material_dynamic_neutral30"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/text_participants"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:textAlignment="center"
                    android:textColor="@color/material_dynamic_neutral30"
                    android:textSize="18sp" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:text="@string/price"
                    android:textAlignment="viewEnd"
                    android:textColor="@color/material_dynamic_neutral30"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/text_price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:textAlignment="center"
                    android:textColor="@color/material_dynamic_neutral30"
                    android:textSize="18sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:text="@string/key"
                    android:textAlignment="viewEnd"
                    android:textColor="@color/material_dynamic_neutral30"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/text_key"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:textAlignment="center"
                    android:textColor="@color/material_dynamic_neutral30"
                    android:textSize="18sp" />
            </LinearLayout>


            <TextView
                android:id="@+id/text_link"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:textAlignment="center"
                android:textColor="@color/material_dynamic_neutral50"
                android:textSize="14sp" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/activity_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/give_me_activity_string"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>