<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/item_cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="5dp"
        android:padding="2dp"
        app:cardCornerRadius="5dp"
        app:cardMaxElevation="5dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/item_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@color/material_dynamic_primary90"
                android:text="TextView"
                android:textAlignment="center"
                android:textColor="#4C64EA"
                android:textSize="20sp"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/expanded_linearLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#F8F3F3"
                android:orientation="vertical"
                android:paddingTop="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:text="@string/accessibility"
                        android:textAlignment="viewEnd"
                        android:textColor="@color/material_dynamic_neutral30"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/text_accessibility"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:textAlignment="center"
                        android:textColor="@color/material_dynamic_neutral30"
                        android:textSize="14sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:text="@string/participants"
                        android:textAlignment="viewEnd"
                        android:textColor="@color/material_dynamic_neutral30"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/text_participants"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:textAlignment="center"
                        android:textColor="@color/material_dynamic_neutral30"
                        android:textSize="14sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:text="@string/type"
                        android:textAlignment="viewEnd"
                        android:textColor="@color/material_dynamic_neutral30"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/text_type"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:textAlignment="center"
                        android:textColor="@color/material_dynamic_neutral30"
                        android:textSize="14sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:text="@string/price"
                        android:textAlignment="viewEnd"
                        android:textColor="@color/material_dynamic_neutral30"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/text_price"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:textAlignment="center"
                        android:textColor="@color/material_dynamic_neutral30"
                        android:textSize="14sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:text="@string/key"
                        android:textAlignment="viewEnd"
                        android:textColor="@color/material_dynamic_neutral30"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/text_key"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:textAlignment="center"
                        android:textColor="@color/material_dynamic_neutral30"
                        android:textSize="14sp" />
                </LinearLayout>

                <TextView
                    android:id="@+id/text_link2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:textAlignment="center"
                    android:textColor="@color/material_dynamic_neutral50"
                    android:textSize="14sp" />
            </LinearLayout>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>